Lab3/Code/syntax.output
Terminals unused in grammar

   LOWER_THAN_ELSE


状态 46 conflicts: 1 shift/reduce
状态 123 conflicts: 12 reduce/reduce


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier ExtDecList error
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | error RC
   28       | SEMI

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | error SEMI
   38     | WHILE LP error RP Stmt
   39     | RETURN error SEMI

   40 DefList: Def DefList
   41        | %empty

   42 Def: Specifier DecList SEMI
   43    | Specifier error SEMI
   44    | Specifier DecList error
   45    | Specifier Dec error

   46 DecList: Dec
   47        | Dec COMMA DecList

   48 Dec: VarDec
   49    | VarDec ASSIGNOP Exp

   50 Exp: Exp ASSIGNOP Exp
   51    | Exp AND Exp
   52    | Exp OR Exp
   53    | Exp RELOP Exp
   54    | Exp PLUS Exp
   55    | Exp MINUS Exp
   56    | Exp STAR Exp
   57    | Exp DIV Exp
   58    | LP Exp RP
   59    | MINUS Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT
   68    | ID LP error RP
   69    | Exp LB error RB
   70    | error RP

   71 Args: Exp COMMA Args
   72     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 20 27 37 38 39 43 44 45 68 69 70
INT (258) 19 66
FLOAT (259) 67
ID (260) 15 17 18 21 22 61 62 64 65 68
SEMI (261) 4 5 8 28 31 33 37 39 42 43
COMMA (262) 10 23 47 71
ASSIGNOP (263) 49 50
RELOP (264) 53
PLUS (265) 54
MINUS (266) 55 59
STAR (267) 56
DIV (268) 57
AND (269) 51
OR (270) 52
NOT (271) 60
DOT (272) 64
TYPE (273) 11
LP (274) 21 22 34 35 36 38 58 61 62 68
RP (275) 21 22 34 35 36 38 58 61 62 68 70
LB (276) 19 20 63 69
RB (277) 19 20 63 69
LC (278) 13 26
RC (279) 13 26 27
STRUCT (280) 13 14
RETURN (281) 33 39
IF (282) 34 35
ELSE (283) 35
WHILE (284) 36 38
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    左： 0
Program (32)
    左： 1, 右： 0
ExtDefList (33)
    左： 2 3, 右： 1 2
ExtDef (34)
    左： 4 5 6 7 8, 右： 2
ExtDecList (35)
    左： 9 10, 右： 4 7 10
Specifier (36)
    左： 11 12, 右： 4 5 6 7 25 42 43 44 45
StructSpecifier (37)
    左： 13 14, 右： 12
OptTag (38)
    左： 15 16, 右： 13
Tag (39)
    左： 17, 右： 14
VarDec (40)
    左： 18 19 20, 右： 9 10 19 20 25 48 49
FunDec (41)
    左： 21 22, 右： 6
VarList (42)
    左： 23 24, 右： 21 23
ParamDec (43)
    左： 25, 右： 23 24
CompSt (44)
    左： 26 27 28, 右： 6 32
StmtList (45)
    左： 29 30, 右： 26 29
Stmt (46)
    左： 31 32 33 34 35 36 37 38 39, 右： 29 34 35 36 38
DefList (47)
    左： 40 41, 右： 13 26 40
Def (48)
    左： 42 43 44 45, 右： 40
DecList (49)
    左： 46 47, 右： 42 44 47
Dec (50)
    左： 48 49, 右： 45 46 47
Exp (51)
    左： 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70, 右： 31 33 34 35 36 49 50 51 52 53 54 55 56 57 58 59 60
    63 64 69 71 72
Args (52)
    左： 71 72, 右： 61 71


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          转到状态 4
    ExtDefList       转到状态 5
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  转到状态 11
    Tag     转到状态 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 14
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . ExtDecList error

    ID    shift, and go to state 15
    SEMI  shift, and go to state 16

    ExtDecList  转到状态 17
    VarDec      转到状态 18
    FunDec      转到状态 19


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 20


State 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  接受


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 18 (VarDec)


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI
    7       | Specifier ExtDecList . error

    error  shift, and go to state 22
    SEMI   shift, and go to state 23


State 18

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 9 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 26
    SEMI   shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  转到状态 29


State 20

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        转到状态 30
    StructSpecifier  转到状态 8
    DefList          转到状态 31
    Def              转到状态 32


State 21

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        转到状态 34
    StructSpecifier  转到状态 8
    VarList          转到状态 35
    ParamDec         转到状态 36


State 22

    7 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 7 (ExtDef)


State 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 24

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  转到状态 38
    VarDec      转到状态 18


State 25

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error RB

    error  shift, and go to state 39
    INT    shift, and go to state 40


State 26

   27 CompSt: error . RC

    RC  shift, and go to state 41


State 27

   28 CompSt: SEMI .

    $default  reduce using rule 28 (CompSt)


State 28

   26 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        转到状态 30
    StructSpecifier  转到状态 8
    DefList          转到状态 42
    Def              转到状态 32


State 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 30

   42 Def: Specifier . DecList SEMI
   43    | Specifier . error SEMI
   44    | Specifier . DecList error
   45    | Specifier . Dec error

    error  shift, and go to state 43
    ID     shift, and go to state 37

    VarDec   转到状态 44
    DecList  转到状态 45
    Dec      转到状态 46


State 31

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 47


State 32

   40 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        转到状态 30
    StructSpecifier  转到状态 8
    DefList          转到状态 48
    Def              转到状态 32


State 33

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 34

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  转到状态 49


State 35

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


State 36

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 24 (VarList)


State 37

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 38

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 39

   20 VarDec: VarDec LB error . RB

    RB  shift, and go to state 52


State 40

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 53


State 41

   27 CompSt: error RC .

    $default  reduce using rule 27 (CompSt)


State 42

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    SEMI    shift, and go to state 27
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LC      shift, and go to state 28
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63

    RC  reduce using rule 30 (StmtList)

    CompSt    转到状态 64
    StmtList  转到状态 65
    Stmt      转到状态 66
    Exp       转到状态 67


State 43

   43 Def: Specifier error . SEMI

    SEMI  shift, and go to state 68


State 44

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   48 Dec: VarDec .
   49    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 69
    LB        shift, and go to state 25

    $default  reduce using rule 48 (Dec)


State 45

   42 Def: Specifier DecList . SEMI
   44    | Specifier DecList . error

    error  shift, and go to state 70
    SEMI   shift, and go to state 71


State 46

   45 Def: Specifier Dec . error
   46 DecList: Dec .
   47        | Dec . COMMA DecList

    error  shift, and go to state 72
    COMMA  shift, and go to state 73

    error  [reduce using rule 46 (DecList)]
    SEMI   reduce using rule 46 (DecList)


State 47

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 48

   40 DefList: Def DefList .

    $default  reduce using rule 40 (DefList)


State 49

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 25 (ParamDec)


State 50

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 51

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        转到状态 34
    StructSpecifier  转到状态 8
    VarList          转到状态 74
    ParamDec         转到状态 36


State 52

   20 VarDec: VarDec LB error RB .

    $default  reduce using rule 20 (VarDec)


State 53

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 54

   27 CompSt: error . RC
   37 Stmt: error . SEMI
   70 Exp: error . RP

    SEMI  shift, and go to state 75
    RP    shift, and go to state 76
    RC    shift, and go to state 41


State 55

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


State 56

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


State 57

   61 Exp: ID . LP Args RP
   62    | ID . LP RP
   65    | ID .
   68    | ID . LP error RP

    LP  shift, and go to state 77

    $default  reduce using rule 65 (Exp)


State 58

   59 Exp: MINUS . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 79


State 59

   60 Exp: NOT . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 80


State 60

   58 Exp: LP . Exp RP

    error  shift, and go to state 78
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 81


State 61

   33 Stmt: RETURN . Exp SEMI
   39     | RETURN . error SEMI

    error  shift, and go to state 82
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 83


State 62

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 84


State 63

   36 Stmt: WHILE . LP Exp RP Stmt
   38     | WHILE . LP error RP Stmt

    LP  shift, and go to state 85


State 64

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 65

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 86


State 66

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    SEMI    shift, and go to state 27
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LC      shift, and go to state 28
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63

    RC  reduce using rule 30 (StmtList)

    CompSt    转到状态 64
    StmtList  转到状态 87
    Stmt      转到状态 66
    Exp       转到状态 67


State 67

   31 Stmt: Exp . SEMI
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    SEMI      shift, and go to state 88
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98


State 68

   43 Def: Specifier error SEMI .

    $default  reduce using rule 43 (Def)


State 69

   49 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 99


State 70

   44 Def: Specifier DecList error .

    $default  reduce using rule 44 (Def)


State 71

   42 Def: Specifier DecList SEMI .

    $default  reduce using rule 42 (Def)


State 72

   45 Def: Specifier Dec error .

    $default  reduce using rule 45 (Def)


State 73

   47 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   转到状态 44
    DecList  转到状态 100
    Dec      转到状态 101


State 74

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 75

   37 Stmt: error SEMI .

    $default  reduce using rule 37 (Stmt)


State 76

   70 Exp: error RP .

    $default  reduce using rule 70 (Exp)


State 77

   61 Exp: ID LP . Args RP
   62    | ID LP . RP
   68    | ID LP . error RP

    error  shift, and go to state 102
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    RP     shift, and go to state 103

    Exp   转到状态 104
    Args  转到状态 105


State 78

   70 Exp: error . RP

    RP  shift, and go to state 76


State 79

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   59    | MINUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    STAR  shift, and go to state 93
    DIV   shift, and go to state 94
    DOT   shift, and go to state 97
    LB    shift, and go to state 98

    $default  reduce using rule 59 (Exp)


State 80

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   60    | NOT Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    DOT  shift, and go to state 97
    LB   shift, and go to state 98

    $default  reduce using rule 60 (Exp)


State 81

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   58    | LP Exp . RP
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    RP        shift, and go to state 106
    LB        shift, and go to state 98


State 82

   39 Stmt: RETURN error . SEMI
   70 Exp: error . RP

    SEMI  shift, and go to state 107
    RP    shift, and go to state 76


State 83

   33 Stmt: RETURN Exp . SEMI
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    SEMI      shift, and go to state 108
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98


State 84

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 78
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 109


State 85

   36 Stmt: WHILE LP . Exp RP Stmt
   38     | WHILE LP . error RP Stmt

    error  shift, and go to state 110
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 111


State 86

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


State 87

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


State 88

   31 Stmt: Exp SEMI .

    $default  reduce using rule 31 (Stmt)


State 89

   50 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 112


State 90

   53 Exp: Exp RELOP . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 113


State 91

   54 Exp: Exp PLUS . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 114


State 92

   55 Exp: Exp MINUS . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 115


State 93

   56 Exp: Exp STAR . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 116


State 94

   57 Exp: Exp DIV . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 117


State 95

   51 Exp: Exp AND . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 118


State 96

   52 Exp: Exp OR . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 119


State 97

   64 Exp: Exp DOT . ID

    ID  shift, and go to state 120


State 98

   63 Exp: Exp LB . Exp RB
   69    | Exp LB . error RB

    error  shift, and go to state 121
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  转到状态 122


State 99

   49 Dec: VarDec ASSIGNOP Exp .
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98

    $default  reduce using rule 49 (Dec)


State 100

   47 DecList: Dec COMMA DecList .

    $default  reduce using rule 47 (DecList)


State 101

   46 DecList: Dec .
   47        | Dec . COMMA DecList

    COMMA  shift, and go to state 73

    $default  reduce using rule 46 (DecList)


State 102

   68 Exp: ID LP error . RP
   70    | error . RP

    RP  shift, and go to state 123


State 103

   62 Exp: ID LP RP .

    $default  reduce using rule 62 (Exp)


State 104

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB
   71 Args: Exp . COMMA Args
   72     | Exp .

    COMMA     shift, and go to state 124
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98

    $default  reduce using rule 72 (Args)


State 105

   61 Exp: ID LP Args . RP

    RP  shift, and go to state 125


State 106

   58 Exp: LP Exp RP .

    $default  reduce using rule 58 (Exp)


State 107

   39 Stmt: RETURN error SEMI .

    $default  reduce using rule 39 (Stmt)


State 108

   33 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 109

   34 Stmt: IF LP Exp . RP Stmt
   35     | IF LP Exp . RP Stmt ELSE Stmt
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    RP        shift, and go to state 126
    LB        shift, and go to state 98


State 110

   38 Stmt: WHILE LP error . RP Stmt
   70 Exp: error . RP

    RP  shift, and go to state 127


State 111

   36 Stmt: WHILE LP Exp . RP Stmt
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    RP        shift, and go to state 128
    LB        shift, and go to state 98


State 112

   50 Exp: Exp . ASSIGNOP Exp
   50    | Exp ASSIGNOP Exp .
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98

    $default  reduce using rule 50 (Exp)


State 113

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   53    | Exp RELOP Exp .
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    PLUS   shift, and go to state 91
    MINUS  shift, and go to state 92
    STAR   shift, and go to state 93
    DIV    shift, and go to state 94
    DOT    shift, and go to state 97
    LB     shift, and go to state 98

    $default  reduce using rule 53 (Exp)


State 114

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   54    | Exp PLUS Exp .
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    STAR  shift, and go to state 93
    DIV   shift, and go to state 94
    DOT   shift, and go to state 97
    LB    shift, and go to state 98

    $default  reduce using rule 54 (Exp)


State 115

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   55    | Exp MINUS Exp .
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    STAR  shift, and go to state 93
    DIV   shift, and go to state 94
    DOT   shift, and go to state 97
    LB    shift, and go to state 98

    $default  reduce using rule 55 (Exp)


State 116
